about.html content merge in index.html

--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
 
                     <ul class="flex flex-col xl:flex-row gap-8 xl:gap-10 items-center">
                         <li><a href="#work" class="text-white text-2xl xl:text-lg hover:text-gray-400">Work</a></li>
-                        <li><a href="about.html" target="_blank"
-                                class="text-white text-2xl xl:text-lg hover:text-gray-400">About</a>
+                        <li><a href="#about" class="text-white text-2xl xl:text-lg hover:text-gray-400">About</a>
                         </li>
                         <li><a href="#contactme" class="text-white text-2xl xl:text-lg hover:text-gray-400">Contact</a>
                         </li>
@@ -46,7 +45,7 @@
         <section>
             <div
                 class="max-w-7xl mx-auto lg:flex-row flex-col md:mt-34 mt-15 flex gap-10 md:justify-between p-6 text-left lg:gap-40">
-                <div class="flex-1 md:text-left lg:w-1/2">
+                <div class="flex-1 md:text-left">
                     <h1 class="text-white text-5xl md:text-[55px] font-bebas uppercase leading-tight">
                         Hi, i am <br>Bhavesh Suthar.
                     </h1>
@@ -170,7 +169,7 @@
     </div>
     <hr class="text-[#343a40] mt-20 mb-20 w-full">
     <div class="container md:max-w-8xl md:mx-auto">
-        <section class="about-me">
+        <section class="about-me" id="about">
             <div
                 class="about-me-content max-w-7xl mx-auto md:flex lg:flex-row flex-col md:mt-34 mt-7 flex gap-4 md:justify-between p-6 text-left md:items-start lg:items-center lg:gap-40 md:g-40">
                 <div class=" about-heading flex mb-5">
@@ -192,10 +191,112 @@
                         I am not programming, I enjoy playing Singing, acting etc. Learning more
                         to improve skill.</p>
 
-                    <a href="about.html"
-                        class="text-black font-medium w-40.5 uppercase bg-[#D3E97A] p-2 flex justify-center items-center rounded-full mt-8">More
-                        About
-                        Me</a>
+                    <div class="flex w-full gap-4 items-center mt-6">
+                        <a href="src/Document/Bhavesh Suthar resume.pdf" download="resume-bhavesh.pdf"
+                            class="text-black font-medium bg-[#D3E97A] w-50.5 p-2 h-12 rounded-3xl flex items-center gap-3 text-[13px] justify-around">Download
+                            Resume <i
+                                class="fa-solid fa-download text-2xl text-black p-2 rounded-full flex justify-center items-center"></i></a>
+
+                        <a href="https://github.com/suthar-bhavesh"
+                            class="cursor-pointer bg-[#222222] p-3 rounded-full"><i
+                                class="fa-brands fa-github text-[#D3E97A] text-2xl"></i></a>
+
+                        <a href="https://www.linkedin.com/in/bhavesh-suthar-401925280/"
+                            class="cursor-pointer bg-[#222222] p-3 rounded-full"><i
+                                class="fa-brands fa-linkedin text-[#D3E97A] text-2xl"></i></a>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+    <hr class="text-[#343a40] mt-20 mb-20">
+    <div class="container md:max-w-8xl md:mx-auto">
+        <section class="skill-section mt-15">
+            <div
+                class="tech skill max-w-7xl mx-auto md:flex lg:flex-row flex-col md:mt-34 mt-7 flex gap-4 md:justify-between p-6 text-left md:items-start lg:items-center lg:gap-40 md:g-40">
+                <div class="tech skill heading flex mb-5">
+                    <h2
+                        class="md:text-5xl text-5xl uppercase font-bebas tracking-wider font-light w-80 text-white sm:text-left">
+                        Technical skill
+                    </h2>
+                </div>
+                <div class="about-para md:flex md:flex-col gap-13 sm:mt-4 md:w-180 lg:w-160">
+                    <p class="text-gray-400 mb-5">I'm always learning and pushing myself toward new achievements.
+                        Keeping up with the latest technology gives me the freedom to adapt and keeps my skills sharp.
+                    </p>
+
+                    <div class="flex w-full gap-4 items-center text-white flex-wrap">
+                        <span class="border py-2 px-7 rounded-4xl flex justify-center items-center w-22">HTML</span>
+                        <span class="border py-2 px-7 rounded-4xl flex justify-center items-center w-22">CSS</span>
+                        <span
+                            class="border py-2 px-7 rounded-4xl flex justify-center items-center w-40">JAVASCRIPT</span>
+                        <span class="border py-2 px-7 rounded-4xl flex justify-center items-center w-25">FIGMA</span>
+                        <span class="border py-2 px-7 rounded-4xl flex justify-center items-center w-25">GITHUB</span>
+                        <span class="border py-2 px-7 rounded-4xl flex justify-center items-center w-25">GIT</span>
+                        <span class="border py-2 px-7 rounded-4xl flex justify-center items-center w-42">TAILWIND
+                            CSS</span>
+                        <span
+                            class="border py-2 px-7 rounded-4xl flex justify-center items-center w-35">BOOTSTRAP</span>
+                        <span class="border py-2 px-7 rounded-4xl flex justify-center items-center w-32">REST API</span>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+    <hr class="text-[#343a40] mt-20 mb-20">
+    <div class="container md:max-w-8xl md:mx-auto">
+        <section class="myexp">
+            <div
+                class="my-exp max-w-7xl mx-auto md:flex lg:flex-row flex-col md:mt-34 mt-7 flex gap-4 md:justify-between p-6 text-left md:items-start lg:items-center lg:gap-40 md:g-40">
+                <div class="md:text-5xl text-5xl uppercase font-bebas tracking-wider font-light w-70 text-white">
+                    <h2
+                        class="md:text-5xl text-5xl uppercase font-bebas tracking-wider font-light w-80 text-white sm:text-left">
+                        my experience
+                    </h2>
+                </div>
+                <div class="exp section flex items-start gap-10 flex-col md:w-180 lg:w-160">
+                    <div class="exp cart flex md:justify-between w-full flex-col gap-10">
+                        <div class="designation-year flex justify-between md:flex-col lg:flex-row flex-col gap-3">
+                            <h3 class="text-white text-xl font-light">Freelance Web Developer</h3>
+                            <p class="text-sm text-[#C7C7C7]">August 2024 - Present</p>
+                        </div>
+                        <div class="job-decs">
+                            <p class="text-gray-400 text-justify">Design and develop responsive, user friendly
+                                interfaces for
+                                websites
+                                with a strong focus
+                                on usability and visual consistency across devices. Build, optimize, and maintain
+                                frontend components using HTML, CSS, JavaScript, and modern frameworks to deliver
+                                fast
+                                and engaging experiences. Ensure cross browser compatibility, high performance, and
+                                smooth interactions for all users. Collaborate closely with backend developers to
+                                integrate APIs and dynamic data seamlessly into the interface. Continuously
+                                identify,
+                                troubleshoot, and fix UI bugs while refining layouts, interactions, and overall
+                                usability to improve the end user experience.</p>
+                        </div>
+                    </div>
+                    <div class="exp cart flex md:justify-between w-full flex-col gap-10">
+                        <div class="designation-year flex justify-between md:flex-col lg:flex-row flex-col gap-3">
+                            <h3 class="text-white text-xl font-light">Frontend Developer Intern <br> <span
+                                    class="text-sm text-[#D3E97A]">Capritech Global Services Pvt. Ltd.
+                                    (CTGS)</span></h3>
+                            <p class="text-sm text-[#C7C7C7]">March 2024 - June 2024</p>
+                        </div>
+                        <div class="job-decs">
+                            <p class="text-gray-400 text-justify">Worked on front end web development projects using
+                                HTML, CSS,
+                                JavaScript, and Bootstrap, contributing to the design and development of school
+                                websites
+                                with responsive and user friendly interfaces. Built a strong understanding of web
+                                structure, layout design, and clean coding practices while gaining hands on
+                                experience
+                                in UI design. Collaborated closely with team members to maintain project quality and
+                                consistency, and consistently delivered professional, high quality results within
+                                tight
+                                deadlines.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
