--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="shortcut icon" href="src/img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="src/output.css">
-    <link rel="stylesheet" href="./src/style.css">
     <title>Bhavesh Suthar | Frontend Developer | Building Accessible & User-Friendly Websites</title>
 </head>
 
@@ -55,7 +54,7 @@
                     </p>
                     <div class="flex items-center justify-center md:justify-start gap-4 mt-9">
                         <a href="#contactme"
-                            class="bg-[#D3E97A] px-6 py-3 rounded-full uppercase text-black font-bold text-sm">
+                            class="bg-[#D3E97A] px-6 py-3 rounded-full uppercase text-black font-medium text-sm">
                             Contact Me
                         </a>
                         <a href="#" class="bg-[#222222] p-3 rounded-full text-[#D3E97A] text-2xl"><i
@@ -196,14 +195,6 @@
                             class="text-black font-medium bg-[#D3E97A] w-50.5 p-2 h-12 rounded-3xl flex items-center gap-3 text-[13px] justify-around">Download
                             Resume <i
                                 class="fa-solid fa-download text-2xl text-black p-2 rounded-full flex justify-center items-center"></i></a>
-
-                        <a href="https://github.com/suthar-bhavesh"
-                            class="cursor-pointer bg-[#222222] p-3 rounded-full"><i
-                                class="fa-brands fa-github text-[#D3E97A] text-2xl"></i></a>
-
-                        <a href="https://www.linkedin.com/in/bhavesh-suthar-401925280/"
-                            class="cursor-pointer bg-[#222222] p-3 rounded-full"><i
-                                class="fa-brands fa-linkedin text-[#D3E97A] text-2xl"></i></a>
                     </div>
                 </div>
             </div>
@@ -226,7 +217,8 @@
                     </p>
 
                     <div class="flex w-full gap-4 items-center text-white flex-wrap">
-                        <span class="border py-2 px-7 rounded-4xl flex justify-center items-center w-22">HTML</span>
+                        <span
+                            class="border py-2 px-7 rounded-4xl flex justify-center items-center w-22 hover:bg-gray-400 hover:text-black">HTML</span>
                         <span class="border py-2 px-7 rounded-4xl flex justify-center items-center w-22">CSS</span>
                         <span
                             class="border py-2 px-7 rounded-4xl flex justify-center items-center w-40">JAVASCRIPT</span>
